# blindpay-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
examples/: get_rails.rs
src/: client.rs  error.rs  http.rs  internal.rs  lib.rs  webhooks.rs
src/common/: mod.rs  pagination.rs  scalars.rs
src/resources/: mod.rs
src/resources/available/: mod.rs  types.rs
src/resources/customers/: bank_accounts.rs  mod.rs  types.rs
src/resources/fees/: mod.rs  types.rs
src/resources/instances/: mod.rs  tos.rs  types.rs  webhook_endpoints.rs
src/resources/partner_fees/: mod.rs  types.rs
src/resources/payins/: mod.rs  quotes.rs  types.rs
src/resources/payouts/: mod.rs  types.rs
src/resources/quotes/: mod.rs  types.rs
src/resources/transfers/: mod.rs  quotes.rs  types.rs
src/resources/upload/: mod.rs  types.rs
src/resources/virtual_accounts/: mod.rs  types.rs
src/resources/wallets/: blockchain.rs  custodial.rs  mod.rs  offramp.rs  types.rs
tests/: available.rs  customers.rs  fees.rs  instances.rs  partner_fees.rs  payins.rs  payouts.rs  quotes.rs  transfers.rs  upload.rs  virtual_accounts.rs  wallets.rs
